tests/ui/generic-associated-types/multiple-type-params-with-unmet-bounds.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/multiple-type-params-with-unmet-bounds.rs:8:29
   |
LL |     let _: <() as Trait>::P<String, String>;
   |                             ^^^^^^ the trait `Copy` is not implemented for `String`
   |
note: required by a bound in `Trait::P`
  --> $DIR/multiple-type-params-with-unmet-bounds.rs:2:15
   |
LL |     type P<T: Copy, U: Copy>;
   |               ^^^^ required by this bound in `Trait::P`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
